--- a/style.css
+++ b/style.css
@@ -15,6 +15,22 @@
     color: black;
     font-family: "Mulish", sans-serif;
 }
+
+
+.btn-primary {
+    color: var(--white);
+    background-color: var(--color);
+    padding: 1.05rem 2rem;
+    border-style: none;
+    border-radius: .70rem;
+    cursor: pointer;
+}
+
+
+
+
+
+
 body{
     padding-top: 50px;
     padding-bottom: 80px;
@@ -24,10 +40,14 @@ body{
 
 /* Navbar */
 
+.logo-img {
+    width: 80px;
+    height: 50 px;
+}
 
 .name {
     color: var(--black);
-    font-size: 2.8rem;
+    font-size: 2.6rem;
     font-weight: bolder;
 }
 .travel {
@@ -61,7 +81,61 @@ body{
 
 /* Banner Section */
 
+.banner-section {
+    background-image: url(Images/Group\ 13\ \(1\)\ \(1\).png);
+    background-repeat: no-repeat;
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background-position: center;
+    text-align: center;
+}
 
+.banner-title {
+    color: var(--white);
+    font-size: 4rem;
+    font-weight: bolder;
+    padding-top: 106px;
+    padding-bottom: 30px;
+}
+
+.banner-des {
+    color: var(--white);
+    padding-bottom: 2rem;
+}
+
+.banner-form {
+    background-color: rgba(255, 255, 255, 0.308);
+    padding: .7rem .0;
+    width: 800px;
+    margin: 0 auto;
+    border-radius: 1.25rem;
+    align-items: center;
+}
+
+#where {
+    padding: .7rem;
+    margin-right: 1rem;
+    border-radius: 1.25rem;
+    border-style: none;
+}
+
+#when {
+    padding: .7rem;
+    margin-right: 1rem;
+    border-radius: 1.25rem;
+    border-style: none;
+}
+
+#select {
+    padding: .7rem;
+    margin-right: 1rem;
+    border-radius: 1.25rem;
+    border-style: none;
+}
+
+
+/* Header End */
 
 
 
@@ -79,5 +153,31 @@ body{
     .nav {
         flex-direction: column;
         text-align: center;
+    }
+
+    /* banner */
+
+    /* .banner-section{
+        display: none;
+    } */
+
+    .banner-title {
+        padding-top: 20px;
+    }
+    .banner-form {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        gap: .5rem;
+    }
+
+    #where {
+        width: 70%;
+    }
+    #when {
+        width: 70%;
+    }
+    #select {
+        width: 70%;
     }
 }
