--- a/style.css
+++ b/style.css
@@ -142,14 +142,18 @@ body{
 
 main{
     margin-top: 6.25rem;
+    width: 1170px;
+    margin: 0 auto;
 }
+
+/* Popular-section */
 
 .popular-section {
     display: flex;
-     width: 1170px;
-     margin: 0 auto;
      gap: 2rem;
      align-items: center;
+     margin-top: 100px;
+     margin-bottom: 100px;
 }
 
 .popular-title {
@@ -174,6 +178,21 @@ main{
 
 .read {
     margin-top: 20px;
+}
+
+
+/* Destination-section */
+
+
+.choose-title {
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color: var(--black);
+}
+
+.choose-desc {
+    color: var(--lowBlack);
+    margin-bottom: 50px;
 }
 
 
