--- a/style.css
+++ b/style.css
@@ -58,7 +58,9 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-bottom: 50px;
+    width: 1170px;
+    margin: 0 auto;
+    margin-bottom: 100px;
 }
 .name-tag {
     display: flex;
@@ -183,17 +185,73 @@ main{
 
 /* Destination-section */
 
-
+.destination-title {
+    text-align: center;
+}
 .choose-title {
     font-size: 2.5rem;
     font-weight: bolder;
     color: var(--black);
+    margin-bottom: 1.5rem;
 }
 
 .choose-desc {
     color: var(--lowBlack);
     margin-bottom: 50px;
+    margin-bottom: 1.5rem;
 }
+
+.destination-img {
+    display: grid;
+    gap: 1.2rem;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+
+}
+
+.item-img {
+    width: 100%;
+    height: 100%;
+}
+
+
+
+.item-1 {
+    grid-column: auto/span 6;
+}
+.item-2 {
+    grid-column: auto/span 6;
+}
+.item-3 {
+    grid-column: auto/span 4;
+}
+.item-4 {
+    grid-column: auto/span 4;
+}
+.item-5 {
+    grid-column: auto/span 4;
+}
+.item-6 {
+    grid-column: auto/span 6;
+}
+.item-7 {
+    grid-column: auto/span 6;
+}
+
+
+.destination-title-img {
+    display: flex;
+    position: relative;
+    bottom: 55%;
+    color: var(--white);
+    justify-content: center;
+    font-size: 1.75rem;
+}
+
+
+/* why section */
+
+
 
 
 
@@ -218,6 +276,7 @@ main{
 @media screen and (max-width: 576px) {
     .navbar-section {
         flex-direction: column;
+        width: 100%;
     }
     .name-tag {
         padding-bottom: 20px;
@@ -229,9 +288,6 @@ main{
 
     /* banner */
 
-    /* .banner-section{
-        display: none;
-    } */
 
     .banner-title {
         padding-top: 20px;
@@ -255,17 +311,30 @@ main{
 
 
     /* main */
+    main {
+        width: 100%;
+    }
+    
     /* popular-section */
+    
     .popular-section {
         flex-direction: column;
         width: 100%;
     }
-
-    .popular-content, .popular-img {
+    .popular-img {
         width: 100%;
     }
 
     .popular-content {
         text-align: center;
+        padding: 0 1.8rem;
     }
+
+    /* destination-section */
+
+    .destination-img {
+        grid-template-columns: 1fr;
+    }
+
+    /* Why section */
 }
