--- a/style.css
+++ b/style.css
@@ -33,10 +33,10 @@
 
 
 
-body{
+/* body{
     padding-top: 50px;
     padding-bottom: 80px;
-}
+} */
 
 /* Header work */
 
@@ -449,6 +449,57 @@ main{
 .subscribe-btn {
     margin-bottom: 2.5rem;
 }
+/* Main end */
+
+/* ======================================== */
+
+
+
+/* Footer Start */
+
+
+footer {
+    background-color: #5a5a5d37;
+    padding-top: 8rem;
+}
+
+.imran-container {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.imran-title {
+    font-size: 2.5rem;
+    font-weight: 900;
+    color: var(--black);
+}
+
+.imran-desc {
+    width: 600px;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 1.8;
+    margin-bottom: 2rem;
+}
+
+.size {
+    width: 1.2rem;
+}
+
+.social-logo {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    margin-bottom: 3rem;
+}
+
+.reserved {
+    margin-top: 3rem;
+    text-align: center;
+    padding-bottom: 3rem;
+}
 
 
 
@@ -570,6 +621,12 @@ main{
     }
 
     .news-img {
+        width: 100%;
+    }
+
+    /* footer */
+
+    .imran-desc {
         width: 100%;
     }
 }
